--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </fieldset>
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="price">Цена за ночь, руб.</label>
-          <input id="price" name="price" type="number" placeholder="1000" required max="1000000" min='1000'>
+          <input id="price" name="price" type="number" placeholder="5000" required max="1000000" min='1000'>
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--time">
           <label class="ad-form__label" for="timein">Время заезда и выезда</label>
@@ -173,7 +173,7 @@
           <label class="ad-form__label">Фотографии жилья</label>
           <div class="ad-form__photo-container">
             <div class="ad-form__upload">
-              <input type="file" id="images" name="images" class="ad-form__input visually-hidden">
+              <input type="file" id="images" name="images" class="ad-form__input visually-hidden" multiple>
               <label for="images" class="ad-form__drop-zone">Загрузите или&nbsp;перетащите сюда фото</label>
             </div>
             <div class="ad-form__photo"></div>
@@ -247,12 +247,16 @@
       <button class="error__button" href="#">Попробовать снова</button>
     </div>
   </template>
-  <script src="js/constants.js"></script>
+  <script src="js/util.js"></script>
+  <script src="js/debounce.js"></script>
   <script src="js/backend.js"></script>
+  <script src="js/message.js"></script>
   <script src="js/card.js"></script>
   <script src="js/pin.js"></script>
+  <script src="js/drop.js"></script>
   <script src="js/filter.js"></script>
   <script src="js/form.js"></script>
+  <script src="js/preview.js"></script>
   <script src="js/map.js"></script>
 
 </body>
