исправлена часть ошибок защиты

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
     <!-- Карта объявлений -->
     <section class="map map--faded">
-
       <!-- Метки объявлений -->
       <div class="map__pins">
         <div class="map__overlay">
+            <canvas id="canvas"></canvas>
           <h2 class="map__title">И снова Токио!</h2>
         </div>
         <button class="map__pin map__pin--main" style="left: 570px; top: 375px;">
